Add flag icons to lang swither

--- a/public/css/custom-admin.css
+++ b/public/css/custom-admin.css
@@ -1,224 +1,1 @@
-.btn-canadia {
-  background-color: #dc3b31 !important;
-}
-
-button.next {
-  background-color: #ca362c;
-  color: #ffffff;
-  border: none;
-  padding: 10px 30px;
-  font-size: 17px;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-button.previous {
-  background-color: #bbbbbb;
-  color: #ffffff;
-  border: none;
-  padding: 10px 30px;
-  font-size: 17px;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-nav.bg-white {
-  background-color: #dc3b31 !important;
-}
-
-nav .navbar-brand img {
-  width: 200px;
-}
-
-nav .nav-link {
-  color: #ffffff !important;
-}
-
-.content-header h1.title {
-  float: left;
-  margin-right: 20px;
-  padding-top: 4px;
-}
-
-.content-header button a {
-  color: #fff;
-}
-
-#employement_detail #radio-button {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-#employement_detail #radio-button label {
-  flex: none;
-  width: 24.5%;
-}
-
-#employement_detail #radio-button label.active {
-  background-color: #dc3b31 !important;
-  border-color: #dc3b31;
-  color: #fff !important;
-}
-
-#purpose_of_banking_service div .btn-group {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-}
-
-#purpose_of_banking_service div .btn-group label {
-  width: 24.5%;
-}
-
-#purpose_of_banking_service div .btn-group label.active {
-  background-color: #dc3b31 !important;
-  border-color: #dc3b31;
-  color: #fff !important;
-}
-
-#show_account_info div .modal-body div div table {
-  width: 100%;
-}
-
-#show_account_info div .modal-body div div table tr th,
-#show_account_info div .modal-body div div table tr td {
-  border: 1px solid #eee;
-}
-
-#show_account_info div .modal-body div div table tr th {
-  padding: 10px 0px;
-  padding-left: 10px;
-  margin-right: 10px;
-  background-color: #f4f4f4;
-}
-
-#show_account_info div .modal-body div div table tr td {
-  padding-left: 10px;
-}
-
-#frontend-create-account {
-  background-color: #fff;
-}
-
-#frontend-create-account .headline_block {
-  padding: 8px;
-  margin: auto;
-  background-color: #eee;
-  color: #dc3b31;
-}
-
-#frontend-create-account .headline_block .block {
-  margin: 8px auto;
-  max-width: 300px;
-}
-
-#frontend-create-account .headline_block .block .icon {
-  float: left;
-  margin-right: 10px;
-}
-
-#frontend-create-account .headline_block .block .icon img {
-  max-width: 100px;
-  width: 50px;
-  height: 50px;
-}
-
-#frontend-create-account .headline_block .block .icon .fa {
-  font-size: 90px;
-  vertical-align: middle;
-  line-height: initial;
-}
-
-#frontend-create-account .headline_block .block .content {
-  float: left;
-}
-
-#frontend-create-account .headline_block .block .content h1 {
-  font-size: 18px;
-}
-
-#frontend-create-account form {
-  background: #fff;
-  margin-bottom: 30px;
-}
-
-#employement_detail #radio-button {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-#employement_detail #radio-button .btn {
-  flex: none;
-  width: 24.5%;
-}
-
-#employement_detail #radio-button .bg-light.active {
-  background-color: #ef5350 !important;
-  border-color: #ef5350;
-  color: #fff !important;
-}
-
-#reasons_group {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 30px;
-}
-
-#reasons_group label {
-  width: 24%;
-}
-
-#reasons_group .btn {
-  flex: none;
-}
-
-#reasons_group .bg-light.active {
-  background-color: #ef5350 !important;
-  border-color: #ef5350;
-  color: #fff !important;
-}
-
-#purpose_of_banking_service #reasons_group {
-  margin-bottom: 30px;
-}
-
-#purpose_of_banking_service #reasons_group label {
-  width: 33%;
-}
-
-#purpose_of_banking_service #another_reason {
-  display: flex;
-  margin-bottom: 30px;
-}
-
-#purpose_of_banking_service #another_reason label {
-  width: 7%;
-  float: left;
-}
-
-#purpose_of_banking_service #another_reason label.btn {
-  padding: 0px !important;
-}
-
-#purpose_of_banking_service #another_reason input {
-  width: 50%;
-  float: left;
-}
-
-form#fronted-account select {
-  height: calc(1.5em + .75rem + 2px);
-  padding: 0.375rem 1.75rem 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #495057;
-  vertical-align: middle;
-  background: url(/images/icons/select_field.svg) no-repeat right 0.75rem center/8px 10px;
-  background-color: #fff;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  -webkit-appearance: none;
-}
-
+.btn-canadia{background-color:#dc3b31!important}button.next{background-color:#ca362c}button.next,button.previous{color:#fff;border:none;padding:10px 30px;font-size:17px;cursor:pointer;border-radius:5px}button.previous{background-color:#bbb}nav.bg-white{background-color:#dc3b31!important}nav .navbar-brand img{width:200px}nav .nav-link{color:#fff!important}.content-header h1.title{float:left;margin-right:20px;padding-top:4px}.content-header button a{color:#fff}#employement_detail #radio-button label{flex:none;width:24.5%}#employement_detail #radio-button label.active{background-color:#dc3b31!important;border-color:#dc3b31;color:#fff!important}#purpose_of_banking_service div .btn-group{display:flex;width:100%;justify-content:space-between}#purpose_of_banking_service div .btn-group label{width:24.5%}#purpose_of_banking_service div .btn-group label.active{background-color:#dc3b31!important;border-color:#dc3b31;color:#fff!important}#show_account_info div .modal-body div div table{width:100%}#show_account_info div .modal-body div div table tr td,#show_account_info div .modal-body div div table tr th{border:1px solid #eee}#show_account_info div .modal-body div div table tr th{padding:10px 0 10px 10px;margin-right:10px;background-color:#f4f4f4}#show_account_info div .modal-body div div table tr td{padding-left:10px}#frontend-create-account{background-color:#fff}#frontend-create-account .headline_block{padding:8px;margin:auto;background-color:#eee;color:#dc3b31}#frontend-create-account .headline_block .block{margin:8px auto;max-width:300px}#frontend-create-account .headline_block .block .icon{float:left;margin-right:10px}#frontend-create-account .headline_block .block .icon img{max-width:100px;width:50px;height:50px}#frontend-create-account .headline_block .block .icon .fa{font-size:90px;vertical-align:middle;line-height:normal}#frontend-create-account .headline_block .block .content{float:left}#frontend-create-account .headline_block .block .content h1{font-size:18px}#frontend-create-account form{background:#fff;margin-bottom:30px}#employement_detail #radio-button{width:100%;display:flex;justify-content:space-between}#employement_detail #radio-button .btn{flex:none;width:24.5%}#employement_detail #radio-button .bg-light.active{background-color:#ef5350!important;border-color:#ef5350;color:#fff!important}#reasons_group{display:flex;justify-content:space-between;margin-bottom:30px}#reasons_group label{width:24%}#reasons_group .btn{flex:none}#reasons_group .bg-light.active{background-color:#ef5350!important;border-color:#ef5350;color:#fff!important}#purpose_of_banking_service #reasons_group{margin-bottom:30px}#purpose_of_banking_service #reasons_group label{width:33%}#purpose_of_banking_service #another_reason{display:flex;margin-bottom:30px}#purpose_of_banking_service #another_reason label{width:7%;float:left}#purpose_of_banking_service #another_reason label.btn{padding:0!important}#purpose_of_banking_service #another_reason input{width:50%;float:left}form#fronted-account select{height:calc(1.5em + .75rem + 2px);padding:.375rem 1.75rem .375rem .75rem;font-size:1rem;font-weight:400;line-height:1.5;color:#495057;vertical-align:middle;background:url(/images/icons/select_field.svg) no-repeat right .75rem center/8px 10px;background-color:#fff;border:1px solid #ced4da;border-radius:.25rem;-webkit-appearance:none}
