--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,6 +20,13 @@ $canadia-secondary: #00bcd4;
     box-shadow: none !important;
     border: 0px !important;
 }
+#lang{
+	a{
+		img{
+			width: 30px;
+		}
+	}
+ }
 
 
 // .canadia-radio{
